--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -7,14 +7,17 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
 
+  # StatsD Exporter
+  - job_name: 'statsd-exporter'
+    static_configs:
+      - targets: ['statsd-exporter:9102']
+
+  # API Service (future)
   - job_name: 'api-service'
     static_configs:
       - targets: ['api-service:8081']
 
+  # Distribution Service (future)
   - job_name: 'distribution-service'
     static_configs:
       - targets: ['distribution-service:8082']
-
-  - job_name: 'validation-service'
-    static_configs:
-      - targets: ['validation-service:8083']
