--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,7 +4,7 @@ FROM ubuntu:22.04
 ENV DEBIAN_FRONTEND=noninteractive
 
 # Install build dependencies
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     cmake \
     git \
@@ -41,8 +41,21 @@ RUN apt-get update && apt-get install -y \
     libyaml-cpp-dev \
     && rm -rf /var/lib/apt/lists/*
 
+# Create non-root user
+RUN groupadd -r devuser && useradd -r -g devuser -m -s /bin/bash devuser
+
 # Set working directory
 WORKDIR /workspace
+
+# Change ownership of workspace to devuser
+RUN chown -R devuser:devuser /workspace
+
+# Add healthcheck
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+    CMD ps aux || exit 1
+
+# Switch to non-root user
+USER devuser
 
 # Default command
 CMD ["/bin/bash"]
