Revert "fixed formatting style"
This reverts commit 90a9aa9f08e555af8d8d82a4e5a0a2a9b8c1ba37.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Check C++ formatting
         run: |
           if find src include -name '*.cpp' -o -name '*.h' 2>/dev/null | grep -q .; then
-            find src include -name '*.cpp' -o -name '*.h' | xargs clang-format -n -Werror
+            find src include -name '*.cpp' -o -name '*.h' | xargs clang-format -n -Werror --style=Google
           else
             echo "No C++ source files yet, skipping format check"
           fi
